# proyecto_final_arquitectura

./: .gitignore  Dockerfile  Makefile  README.md  auth.sh  config.yaml  pyproject.toml  requirements-app.txt  requirements.txt
.streamlit/: config.toml
FAQ/: Reporte arquitectura.md  uso_ia.md
agent/: README.md  agent.py  normalizer.py  prompts.py  tools.py
frontend/: app.py  config.py  db.py  mock_data.py
infra/: build_ecs.sh  ecs-fargate-app.yaml  rds-autoshop.yaml  rds-inference.yaml
notebooks/: 00_data_generation.ipynb  01_etl.ipynb  02_eda_features.ipynb  03_model.ipynb  04_rds.ipynb
